Enable use of multiple patient data sets.